AGILE-0000-pools-retrieval: add API for pools retrieval